<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rcl.appuem.MainActivity"

    >
    <item
        android:id="@+id/like"
        android:icon="@drawable/ic_favourite"
        android:title="@string/like"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/log_out"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit_app"
        app:showAsAction="never"/>
    <item
        android:id="@+id/alert"
        android:orderInCategory="100"
        android:title="@string/alert"
        app:showAsAction="never"/>


</menu>