<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">
    <ImageView
        android:id="@+id/girl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        >

    </ImageView>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/tilusername"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/bed_icon">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:background="@color/white2"
            android:layout_marginTop="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideRight"
        app:layout_constraintStart_toStartOf="@id/guideLeft"
        app:layout_constraintTop_toBottomOf="@id/tilusername"
        app:layout_constraintBottom_toTopOf="@+id/boton1"
        app:startIconDrawable="@drawable/key"
        app:passwordToggleEnabled="true">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@color/white2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/boton1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:backgroundTint="@color/buttonselector"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="@id/guideLeft"

        />

    <Button
        android:id="@+id/boton2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginLeft="8dp"
        android:backgroundTint="@color/buttonselector"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/boton1"
        app:layout_constraintStart_toEndOf="@+id/boton1"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@id/guideRight"/>

    <ImageView
        android:id="@+id/icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="83dp"
        app:srcCompat="@drawable/iconbutterfly"
        app:layout_constraintBottom_toTopOf="@+id/tilusername"
        app:layout_constraintEnd_toEndOf="@+id/guideRight"
        app:layout_constraintStart_toStartOf="@+id/guideLeft" />

    <TextView
        android:id="@+id/nuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_sign_in"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@+id/boton1"
        app:layout_constraintStart_toStartOf="@+id/guideLeft"
        app:layout_constraintEnd_toEndOf="@+id/guideRight">

    </TextView>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLeft"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideRight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80"/>

</androidx.constraintlayout.widget.ConstraintLayout>